--- a/subgraph/tsconfig.json
+++ b/subgraph/tsconfig.json
@@ -4,7 +4,7 @@
         "module": "ESNext",
         "strict": true,
         "types": [
-            "@graphprotocol/graph-ts/global"
+            "@graphprotocol/graph-ts"
         ],
         "skipLibCheck": true
     },
