--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,20 @@ SECRET_KEY=change_me_dev_long_random
 SESSION_COOKIE_NAME=eco_dms_session
 FRONTEND_ORIGIN=http://localhost:5173
 MOBILE_ORIGIN=exp://127.0.0.1:8081
+
+# IPFS Configuration
+IPFS_API_URL=http://127.0.0.1:5001
+IPFS_GATEWAY_URL=https://ipfs.io/ipfs/
+
+# Pinata Configuration
+PINATA_API_KEY=your_pinata_api_key_here
+PINATA_SECRET_KEY=your_pinata_secret_key_here
+PINATA_JWT=your_pinata_jwt_here
+
+# JWT Secret
+JWT_SECRET_KEY=change-this-to-a-secure-random-key-in-production
+JWT_ALGORITHM=HS256
+JWT_EXPIRATION_MINUTES=1440
+
+# CORS Origins
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
