fix: update IPFS API URL in configuration and enhance connection handling in IPFS service

--- a/backend/.env
+++ b/backend/.env
@@ -9,7 +9,7 @@ MOBILE_ORIGIN=exp://127.0.0.1:8081
 PINATA_JWT=
 
 # IPFS Configuration (leave empty for Pinata-only mode)
-IPFS_API_URL=
+IPFS_API_URL=http://127.0.0.1:5001/api/v0
 IPFS_GATEWAY_URL=https://gateway.pinata.cloud/ipfs/
 
 # JWT Secret (CHANGE IN PRODUCTION!)
