--- a/backend/.env
+++ b/backend/.env
@@ -26,3 +26,10 @@ PROJECT_NAME=Eco-DMS Decentralized
 
 # Blockchain
 CHAIN_ID=1
+
+REDIS_URL=redis://127.0.0.1:6379/0
+NONCE_TTL_SECONDS=300
+SESSION_TTL_SECONDS=3600
+RATE_LIMIT_WINDOW_SEC=60
+RATE_LIMIT_MAX_NONCE=20
+RATE_LIMIT_MAX_VERIFY=60
