fix: update Pinata JWT placeholder in environment configuration

--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ FRONTEND_ORIGIN=http://localhost:5173
 MOBILE_ORIGIN=exp://127.0.0.1:8081
 
 # Pinata Configuration (get JWT from https://app.pinata.cloud/keys)
-PINATA_JWT=
+PINATA_JWT=YOUR_PINATA_JWT_HERE
 
 # IPFS Configuration (leave empty for Pinata-only mode)
 IPFS_API_URL=http://127.0.0.1:5001/api/v0
